--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,7 +40,12 @@
     "import/prefer-default-export": "off",
     "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "no-param-reassign": "off",
+    "no-unused-expressions": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "max-len": "off",
+    "react/require-default-props": "off"
   },
   "settings": {
     "import/resolver": {
